bloodc/src/parser/snapshots/bloodc__parser__tests__enum_with_records.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Enum(
            EnumDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                        start_line: 2,
                        start_col: 6,
                    },
                },
                type_params: None,
                variants: [
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 2,
                            },
                            span: Span {
                                start: 20,
                                end: 24,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                        body: Unit,
                        span: Span {
                            start: 20,
                            end: 24,
                            start_line: 3,
                            start_col: 5,
                        },
                    },
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 3,
                            },
                            span: Span {
                                start: 30,
                                end: 34,
                                start_line: 4,
                                start_col: 5,
                            },
                        },
                        body: Record(
                            [
                                StructField {
                                    vis: Private,
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 4,
                                        },
                                        span: Span {
                                            start: 37,
                                            end: 38,
                                            start_line: 4,
                                            start_col: 12,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 40,
                                                                end: 43,
                                                                start_line: 4,
                                                                start_col: 15,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 40,
                                                    end: 43,
                                                    start_line: 4,
                                                    start_col: 15,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 40,
                                            end: 43,
                                            start_line: 4,
                                            start_col: 15,
                                        },
                                    },
                                    span: Span {
                                        start: 37,
                                        end: 43,
                                        start_line: 4,
                                        start_col: 12,
                                    },
                                },
                                StructField {
                                    vis: Private,
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 6,
                                        },
                                        span: Span {
                                            start: 45,
                                            end: 46,
                                            start_line: 4,
                                            start_col: 20,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 48,
                                                                end: 51,
                                                                start_line: 4,
                                                                start_col: 23,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 48,
                                                    end: 51,
                                                    start_line: 4,
                                                    start_col: 23,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 48,
                                            end: 51,
                                            start_line: 4,
                                            start_col: 23,
                                        },
                                    },
                                    span: Span {
                                        start: 45,
                                        end: 51,
                                        start_line: 4,
                                        start_col: 20,
                                    },
                                },
                            ],
                        ),
                        span: Span {
                            start: 30,
                            end: 53,
                            start_line: 4,
                            start_col: 5,
                        },
                    },
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 7,
                            },
                            span: Span {
                                start: 59,
                                end: 64,
                                start_line: 5,
                                start_col: 5,
                            },
                        },
                        body: Tuple(
                            [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 8,
                                                        },
                                                        span: Span {
                                                            start: 65,
                                                            end: 71,
                                                            start_line: 5,
                                                            start_col: 11,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 65,
                                                end: 71,
                                                start_line: 5,
                                                start_col: 11,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 65,
                                        end: 71,
                                        start_line: 5,
                                        start_col: 11,
                                    },
                                },
                            ],
                        ),
                        span: Span {
                            start: 59,
                            end: 72,
                            start_line: 5,
                            start_col: 5,
                        },
                    },
                ],
                span: Span {
                    start: 1,
                    end: 75,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 75,
        start_line: 2,
        start_col: 1,
    },
}
